# intelligo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.html
examples/: main.py
intelligo/: __init__.py  config.toml  config.yaml  exceptions.py  intelligo.py  models.py  new_prompt.md  prompt.md  scrape.py  scraper.py  translator.py  types.py
intelligo/prompts/: korean.py
intelligo/sites/: booktoki.py
src/intelligo/: __init__.py  intelligo.py  types.py
src/intelligo/prompts/: korean.py
